...

class TutorialIntroStep extends StatelessWidget {
  @override
  Widget build(BuildContext context) {
    final AppLocalizations localizations = AppLocalizations.of(context);
    return SafeArea(
      key: ValueKey('tutorialIntroStep'),
      child: ScrollableBody(
        child: Container(
          padding: EdgeInsets.symmetric(vertical: 40),
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            children: <Widget>[
...
                  ],
                ),
              ),
              Container(
                padding: EdgeInsets.symmetric(horizontal: 40),
                child: RaisedButton(
                  key: ValueKey('tutorialIntroStepContinueButton'),
                  onPressed: () =>
                      Provider.of<TutorialController>(context, listen: false)
                          .next(),
                  child: Text(localizations.tutorialIntroStepGetStarted),
                ),
              ),
...
