...

class _ThankYouScreenState extends State<ThankYouScreen> {
  @override
  Widget build(BuildContext context) {
    final AppLocalizations localizations = AppLocalizations.of(context);
    return Scaffold(
      key: ValueKey('symptomReportThankYouScreen'),
      appBar: AppBar(
        leading: IconButton(
          icon: Icon(Icons.close),
          tooltip: localizations.thankYouScreenFinishButton,
          onPressed: () {
            Navigator.of(context).pop();
...
              ),
              Container(
                margin: EdgeInsets.only(bottom: 40),
                padding: EdgeInsets.symmetric(horizontal: 40),
                width: double.infinity,
                child: RaisedButton(
                  key: ValueKey('symptomReportThankYouFinishButton'),
                  onPressed: () => Navigator.pop(context),
                  child: Text(localizations.thankYouScreenFinishButton),
                ),
              ),
            ],
          ),
...
