...
                      crossAxisAlignment: WrapCrossAlignment.center,
                      children: <Widget>[
                        ConstrainedBox(
                          constraints: BoxConstraints(minHeight: 60),
                          child: RaisedButton(
                            key: ValueKey(
                                'symptomReportInformedConsentRejectButton'),
                            onPressed: () => _handleResponse(
                              context: context,
                              state: state,
                              response: false,
                            ),
                            child: rejected
...
                          ),
                        ),
                        ConstrainedBox(
                          constraints: BoxConstraints(minHeight: 60),
                          child: RaisedButton(
                            key: ValueKey(
                                'symptomReportInformedConsentAcceptButton'),
                            onPressed: () => _handleResponse(
                              context: context,
                              state: state,
                              response: true,
                            ),
                            child: agreed
...
